fix broken master/detail on mobile

--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -35,8 +35,4 @@
   .container.itemSelected .detail {
     display: flex;
   }
-
-  .container.itemSelected .listContainer {
-    display: none;
-  }
 }
