--- a/src/components/storylist.module.css
+++ b/src/components/storylist.module.css
@@ -5,3 +5,9 @@
 .loadMoreButton {
   width: 100%;
 }
+
+@media (max-width: 960px) {
+  .root.itemSelected {
+    display: none;
+  }
+}
